--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>8</java.version>
+	
+  <sonar.projectKey>niknav_OrderHack</sonar.projectKey>
+  <sonar.organization>nik</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  <sonar.login>3756a9a3f1b9c37b3186535752a70575fe538527</sonar.login>
 	</properties>
 <dependencyManagement>
 		<dependencies>
